Began Medium challenge

--- a/Easy/Easy.html
+++ b/Easy/Easy.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EasyChallenge</title>
 </head>
 <body>
+    <h1>Please Check the Console for the Easy Challenge</h1>
     <script type="text/javascript" src="Easy.js"></script>
 </body>
 </html>
