--- a/VeryHard/VeryHard.html
+++ b/VeryHard/VeryHard.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HardChallenge</title>
+    <title>VeryHardChallenge</title>
 </head>
 <body>
-    <h1>Please Check the Console for the Hard Challenge Outputs</h1>
-    <script type="text/javascript" src="Hard.js"></script>
+    <h1>Welcome to your simple calculator! </h1>
+    <br>
+    <script type="text/javascript" src="VeryHard.js"></script>
 </body>
 </html>
